# trmnl-wingspan

./: .gitignore  .gitmodules  LICENSE  README.md  flake.nix  shell.nix
api/: Cargo.toml  Dockerfile  config.example.toml  docker-compose.yml
api/src/: auth.rs  bird.rs  config.rs  main.rs
plugin/: .trmnlp.yml
plugin/src/: full.liquid  half_horizontal.liquid  half_vertical.liquid  quadrant.liquid  settings.yml  shared.liquid
