[package]
name = "spannweite"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["query", "typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header", "auth"] }
chrono = "0.4"
rand = "0.9"
rand_chacha = "0.9"
form_urlencoded = "1.2"